@@ -68,20 +68,6 @@ AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 INSTALL_DIR="$INSTALL -d"
 
-dnl Note: This should be changed by os_type, after
-dnl Checking the result for Cygwin (jfs)
-uname_output=`uname`
-case "$uname_output" in 
- *CYGWIN*)
- 	is_cygwin=$uname_output
-	AC_DEFINE(_CYGWIN_)
-	;;
- *)
- 	is_cygwin=""
-	;;
-esac
-
-
 test -n "$GCC" && CWALL="-Wall"
 
 
@@ -107,13 +93,6 @@ AC_ARG_ENABLE(debug,[  --enable-debug	  set the compiler flags to -g],[
 AC_ARG_ENABLE(install,[  --enable-install=user	  for debugging, install as non-root user],
 	installuser=$enable_install)
 : ${installuser:=root}
-
-test -n "$is_cygwin" && {
-  test "$installuser" = "root" && 
-  {
-   installuser=`whoami`
-  }
-}
 
 AC_ARG_ENABLE(syslog,[  --enable-syslog	  log messages via syslog()],
 	AC_DEFINE(USE_SYSLOG))
@@ -725,7 +704,6 @@ AC_SUBST(LIBOPENVASCONFIG)
 AC_SUBST(OPENVASLIBNASLCONFIG)
 AC_SUBST(ac_configure_args)
 AC_SUBST(egdpath)
-AC_SUBST(is_cygwin)
 AC_SUBST(installuser)
 
 
