@@ -46,7 +46,6 @@ sharedstatedir=@sharedstatedir@
 sbindir=@exec_prefix@/sbin
 bindir=@exec_prefix@/bin
 egdpath=@egdpath@
-is_cygwin=@is_cygwin@
 
 RANDFLAG=""
 test -n "$egdpath" && 
@@ -106,8 +105,6 @@ echo
 }
 #
 
-if [ -z "$is_cygwin" ];
-then
 #
 # We need root priv
 #
@@ -122,7 +119,6 @@ uid=0*)
     gettext "Only root can use openvas-mkcert."; echo
     exit 1
 esac
-fi
 
 #
 # We need openssl
